# CPRE5430-WiFormula

./: build.gradle  package-lock.json  settings.gradle
Hardware/: .gitignore
Hardware/main_node_code/main/: CMakeLists.txt  globals.c  globals.h  handle_sub_node_auth.c  handle_sub_node_auth.h  http_event_handler.c  http_event_handler.h  http_task.c  http_task.h  idf_component.yml  ip_event_handler.c  ip_event_handler.h  main.h  main_node_entry.c  mqtt_event_handler.c  mqtt_event_handler.h  mqtt_startups.c  mqtt_startups.h  send_register_request.c  send_register_request.h  start_websocket.c  start_websocket.h  websocket_client_handler.c  websocket_client_handler.h  wifi_event_handler.c  wifi_event_handler.h  wifi_startups.c  wifi_startups.h
Hardware/sub_node_code/: .gitignore
Hardware/sub_node_code/main/: CMakeLists.txt  connection_attempter.c  connection_attempter.h  globals.c  globals.h  idf_component.yml  initialize_led_config.h  intitialize_led_config.c  ip_event_handler.c  ip_event_handler.h  led_color_handler.c  led_color_handler.h  main.h  mqtt_handlers.c  mqtt_handlers.h  sub_node_entry.c  wifi_event_handler.c  wifi_event_handler.h
Software/WiFormulaDataPoller/: .gitignore  race_replay_engine.py  ws_testing.py
Software/WiFormulaServer/: build.gradle
Software/wi-formula-web/: index.html  package.json
main_node_code/: .gitignore  CMakeLists.txt
main_node_code/esp32_ap_mode/: CMakeLists.txt
main_node_code/esp32_main_node/: CMakeLists.txt
src/: App.jsx  config.js
sub_node_code/: CMakeLists.txt
wi-formula_main_node/: CMakeLists.txt  sdkconfig
(+60 files in other folders)
